--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -16,14 +16,14 @@
 
 @border-radius-base: 0;
 @btn-primary-bg: @brand-primary;
-@container-md: 960px;
+@container-md: 970px;
 @container-lg: @container-md;
 @font-family-base: Tahoma, sans-serif;
 @font-size-base: 12px;
 @input-bg: @panel-bg;
 @input-border: @panel-inner-border;
 @input-color: #b2b2b2;
-@text-color: #8f8f8f;
+@text-color: #000000;
 @navbar-height: 37px;
 @nav-link-padding: 10px 30px;
 @navbar-default-bg: @panel-bg;
@@ -34,10 +34,11 @@
 @list-group-bg: @panel-bg;
 @list-group-border: @panel-inner-border;
 @panel-primary-border: @panel-inner-border;
-@jumbotron-bg: @brand-primary;
-@jumbotron-color: #fff;
+@jumbotron-bg: transparent ;
+@jumbotron-color: white;
 @thumbnail-padding: 1px;
 @thumbnail-border: #c9c9c9;
 
 @myhbc : #22376D;
+@myncl : #BDC8E5;
 @mysbc : #DAE7FB;
