--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -18,8 +18,12 @@ body {
 	
 	.wrapper {
 		padding: 0 0 50px 0;
-		background-color : @mysbc;		
+		background-color : @mysbc;	}
+		
+	.form{
+		
 	}
+	
 	
 	footer {
   	background: #7e7e7e;
@@ -33,8 +37,7 @@ body {
 	.big-container
 	{
 		margin-left:50px;
-		margin-right:50px;
-		
+		margin-right:50px;		
 	
 	}
 	
